<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:background="@color/colorPrimary"
                android:text="@string/global_cafe"
                android:textAlignment="center"
                android:textColor="#FCE4EC"
                android:textSize="45sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:layout_marginBottom="16sp"
                android:contentDescription="@string/logo"
                android:scaleType="fitXY"
                android:src="@drawable/globalcafe" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16sp"
                        android:text="@string/phone"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16sp"
                        android:layout_marginEnd="16sp"
                        android:layout_marginRight="16sp"
                        android:text="@string/email"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16sp"
                        android:layout_marginRight="16sp"
                        android:layout_marginEnd="16sp"
                        android:text="@string/work_hours"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16sp"
                        android:layout_marginRight="16sp"
                        android:layout_marginEnd="16sp"
                        android:text="@string/address"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16sp"
                        android:layout_marginRight="16sp"
                        android:layout_marginEnd="16sp"
                        android:text="@string/number"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16sp"
                        android:text="@string/gmail"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16sp"
                        android:text="24Hr/Week"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16sp"
                        android:text="@string/adress_txt"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
